[tool.poetry]
name = "api-client2"
version = "0.1.0"
description = ""
authors = ["Alexandr <pirogovalexandr00@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
